--- a/src/app/components/review-list/review-list.component.scss
+++ b/src/app/components/review-list/review-list.component.scss
@@ -1,3 +1,13 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+
+    .add-review {
+        align-self: center;
+        margin-top: 0.5rem;
+    }
+}
+
 h1 {
     font-size: 2.5rem;
 }
@@ -9,20 +19,47 @@ h1 {
 }
 
 .review-wrapper {
-    border: 2px solid #B81C46;
+    position: relative;
+    // border: 1px solid #B81C46;
     padding: 20px;
     margin: 1rem 0;
     border-radius: 5px;
     color: #333;
-}
+    overflow: visible;
+    box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.title-wrapper {
-    display: flex;
-    justify-content: space-between;
-    color: #B81C46;
-    margin-bottom: 1rem;
+    .title-wrapper {
+        display: flex;
+        justify-content: space-between;
+        color: #B81C46;
+        margin-bottom: 1rem;
+    
+        h2 {
+            margin: 10px 0;
+        }
+    }
+    
+    .remove-review {
+        cursor: pointer;
+        position: absolute;
+        top: -12px;
+        right: -12px;
+        background-color: #B81C46;
+        color: white;
+        padding: 0.5rem;
+        line-height: 0.5rem;
+        border-radius: 15px;
+        opacity: 0;
+        transition: opacity 0.3s;
+        box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
+    
+        &:hover, &:focus {
+            background-color: #950B30;
+        }
+    }
 
-    h2 {
-        margin: 10px 0;
+    &:hover .remove-review {
+        opacity: 1;
     }
 }
