--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
+html, body { height: 100%; }
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .app-font {
@@ -33,3 +34,4 @@ body {
         background: #fff;
     }
 }
+
