--- a/src/app/components/review-list/review-list.component.scss
+++ b/src/app/components/review-list/review-list.component.scss
@@ -20,7 +20,6 @@ h1 {
 
 .review-wrapper {
     position: relative;
-    // border: 1px solid #B81C46;
     padding: 20px;
     margin: 1rem 0;
     border-radius: 5px;
@@ -28,6 +27,7 @@ h1 {
     overflow: visible;
     box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
     transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 
     .title-wrapper {
         display: flex;
